--- a/4_LSTM_with_SoH/HyperStackedSoH_estimation_with_LSTM.ipynb
+++ b/4_LSTM_with_SoH/HyperStackedSoH_estimation_with_LSTM.ipynb
@@ -637,26 +637,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model = Sequential()\n",
-    "# model.add(LSTM(64, input_shape=(trainX.shape[1], trainX.shape[2])))\n",
+    "# # model = Sequential()\n",
+    "# # model.add(LSTM(64, input_shape=(trainX.shape[1], trainX.shape[2])))\n",
     "\n",
+    "# # model.add(Dense(1))\n",
+    "\n",
+    "# # model.compile(loss='mae', optimizer='adam')\n",
+    "\n",
+    "# from keras.layers import Dropout\n",
+    "\n",
+    "# # 3. Training with Stacked LSTM layers\n",
+    "# model = Sequential()\n",
+    "# model.add(LSTM(64, input_shape=(trainX.shape[1], trainX.shape[2]), return_sequences=True))\n",
+    "# model.add(Dropout(0.2))\n",
+    "# model.add(LSTM(32, return_sequences=False))\n",
+    "# # model.add(Dropout(0.2))\n",
+    "# # model.add(LSTM(16))\n",
+    "# # model.add(Dropout(0.2))\n",
     "# model.add(Dense(1))\n",
     "\n",
-    "# model.compile(loss='mae', optimizer='adam')\n",
-    "\n",
-    "from keras.layers import Dropout\n",
-    "\n",
-    "# 3. Training with Stacked LSTM layers\n",
-    "model = Sequential()\n",
-    "model.add(LSTM(64, input_shape=(trainX.shape[1], trainX.shape[2]), return_sequences=True))\n",
-    "model.add(Dropout(0.2))\n",
-    "model.add(LSTM(32, return_sequences=False))\n",
-    "# model.add(Dropout(0.2))\n",
-    "# model.add(LSTM(16))\n",
-    "# model.add(Dropout(0.2))\n",
-    "model.add(Dense(1))\n",
-    "\n",
-    "model.compile(loss='mae', optimizer='adam')"
+    "# model.compile(loss='mae', optimizer='adam')"
    ]
   },
   {
@@ -771,13 +771,14 @@
     "\n",
     "\n",
     "\n",
-    "final_model = build_model(best_hps)\n",
-    "final_history = final_model.fit(trainX, trainY, epochs=100, validation_data=(testX, testY),shuffle = False,callbacks=[early_stop])"
+    "# final_model = build_model(best_hps)\n",
+    "# final_history = final_model.fit(trainX, trainY, epochs=100, validation_data=(testX, testY),shuffle = False,callbacks=[early_stop])\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
